chore: migrate from Maven to Gradle, improve testing, and apply formatting
- Switched project build system from Maven to Gradle
- Updated dependencies and adjusted build configurations
- Refactored and improved testing setup
- Reformatted all files using Spotless

Signed-off-by: Javier Roman <javier.rmgz@gmail.com>